--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.lunch_voting</groupId>
-    <artifactId>lunch-voting</artifactId>
+    <groupId>ru.lunchvoting</groupId>
+    <artifactId>lunchvoting</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
