--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -43,7 +43,7 @@ spring:
 
   # https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html#common-application-properties-cache
   cache:
-#    cache-names: users
+    cache-names: allRestaurants,restaurants, dishes
     caffeine.spec: maximumSize=5000,expireAfterAccess=60s
 
 logging:
