--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -43,7 +43,7 @@ spring:
 
   # https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html#common-application-properties-cache
   cache:
-    cache-names: allRestaurants, restaurants, allDishes, dishes
+    cache-names: allRestaurants, allRestaurantsWithDishes, restaurants, allDishes, allDishesByDate, dishes
     caffeine.spec: maximumSize=5000, expireAfterAccess=60s
 
 logging:
